fix signup.css file

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -124,7 +124,8 @@ html, body {
 
   .login-link{
     position: unset;
-    margin-top: -40px;
+    margin-top: -30px;
+    margin-right: 100px;
   }
   
   .login-link a{
